--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
     .fc-scroller > .fc-time-grid {
         position: relative; /* re-scope all positions */
         width: 100%; /* hack to force re-sizing this inner element when scrollbars appear/disappear */
+        min-width: 1000px;
     }
-
 
     /* Global Event Styles
     --------------------------------------------------------------------------------------------------*/
@@ -1105,6 +1105,19 @@
         top: 0;
         bottom: 0;
         overflow: hidden;
+    }
+
+    .fc-resource-scroll {
+        position: relative;
+        overflow-x: hidden;
+    }
+
+    .fc-resource-table {
+        position: relative;
+    }
+
+    .fc-resource-scroll > .fc-resource-table {
+        min-width: 1000px;
     }
 
     .fc-time-grid .fc-slats .fc-minor td {
@@ -3645,10 +3658,10 @@
         return $(window).height() - 100;
     }
 
-    var elBody = $('body').append('<div class="tooltiptopicevent"></div>');
+    $('body').append('<div class="tooltiptopicevent"></div>');
     var elTooltip = $('.tooltiptopicevent');
 
-    elBody.on('mousemove', function() {
+    $(document).on('mousemove', function() {
         elTooltip.hide();
     });
 
@@ -3663,7 +3676,7 @@
             right: 'month,schedulerDay,schedulerWeek'
         },
         height: getCalendarHeight(),
-        minContentWidth: 800,
+        minContentWidth: 1000,
         defaultView: 'schedulerDay',
         eventColor: '',
         allDaySlot: false,
@@ -3704,8 +3717,6 @@
             if(event.which === 0) {
                 var resource = footprint.resource
 
-                event.stopPropagation();
-
                 elTooltip.show();
                 elTooltip.css('top', event.pageY + 10);
                 elTooltip.css('left', event.pageX + 20);
@@ -3738,7 +3749,6 @@
         },
 
         eventMouseover: function (data, event, view) {
-            event.stopPropagation();
 
             elTooltip.show();
             elTooltip.html(data.tooltip)
@@ -3752,6 +3762,7 @@
         },
 
         eventMouseout: function (data, event, view) {
+
             $(this).css('z-index', 8);
             elTooltip.hide();
         }
