Remove horizontal scrolling

--- a/index~.html
+++ b/index~.html
@@ -508,6 +508,9 @@
         border-top: 0;
     }
 
+    .fc-scroller-view {
+        min-width: 1000px;
+    }
 
     /* Scrolling Container
     --------------------------------------------------------------------------------------------------*/
@@ -3839,7 +3842,7 @@
         var scrollPos = getWindowScrollPosition();
         var param = [scrollPos.percentX, scrollPos.percentY];
 
-        window.location = "FMP://$/Appt10_scroll_10_15.fmp12?script=Rotate Code&param="+param;
+        // window.location = "FMP://$/Appt10_scroll_10_15.fmp12?script=Rotate Code&param="+param;
     }
 });
 </script>
