--- a/index~.html
+++ b/index~.html
@@ -508,7 +508,7 @@
         border-top: 0;
     }
 
-    .fc-scroller-view {
+    .fc-scheduler-view {
         min-width: 1000px;
     }
 
@@ -1109,7 +1109,6 @@
         right: 0;
         top: 0;
         bottom: 0;
-        overflow: hidden;
     }
 
     .fc-resource-scroll {
@@ -3842,7 +3841,7 @@
         var scrollPos = getWindowScrollPosition();
         var param = [scrollPos.percentX, scrollPos.percentY];
 
-        // window.location = "FMP://$/Appt10_scroll_10_15.fmp12?script=Rotate Code&param="+param;
+        window.location = "FMP://$/Appt10_scroll_10_15.fmp12?script=Rotate Code&param="+param;
     }
 });
 </script>
