Fix event dragging interaction

--- a/index.html
+++ b/index.html
@@ -3728,13 +3728,13 @@
                 return date.format(':mm');
             }
         },
-        eventConstraint: "businessHours",
+        // eventConstraint: "businessHours",
         eventLimit: true, // allow "more" link when too many events
         events: eventData,
         resources: resources,
         editable: true,
         selectable: true,
-        selectConstraint: "businessHours",
+        // selectConstraint: "businessHours",
 
         cellHover: function (start, event, footprint) {
             tweakMouseMoveEvent(event)
@@ -3795,7 +3795,6 @@
         },
 
         eventOverlap: function (stillEvent, movingEvent) {
-            console.log(stillEvent);
             if(movingEvent.e === 'bo') {
                 return false;
             } else if(stillEvent.e === 'bo'){
@@ -3809,7 +3808,6 @@
 
         selectOverlap: function (event) {
             var eventTypes = ['ap', 'bo'];
-            console.log(event);
             return eventTypes.indexOf(event.e) === -1;
         },
 
