Separate ap/av column

--- a/index.html
+++ b/index.html
@@ -3816,7 +3816,7 @@
             var param = [resource.id, start, end, scrollPos.percentX, scrollPos.percentY];
 
             // TODO: Deselect selection
-            fullCalendar.fullCalendar('unselect');
+            // fullCalendar.fullCalendar('unselect');
 
             // TODO: call FMP
             // window.location = "FMP://$/Appt10_scroll_10_15.fmp12?script=event&param=" + param;
